--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Run It",
-    "slug": "run-it",
+    "name": "one-thing",
+    "slug": "one-thing",
     "version": "1.0.0",
 
     "web": {
